--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Compose Journey</string>
+
+    <!-- Navigation Drawer -->
+    <string name="home">Início</string>
+    <string name="privacy_policy">Política de Privacidade</string>
+    <string name="saved_files">Arquivos Salvos</string>
+    <string name="share_app">Compartilhar App</string>
+
 </resources>
