--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,12 @@
     <string name="saved_files">Arquivos Salvos</string>
     <string name="share_app">Compartilhar App</string>
 
+    <!-- HomeScreen e TrackingScreen -->
+    <string name="tracker">Rastreador</string>
+    <string name="tracking_code">Código de rastreio</string>
+    <string name="cep">CEP</string>
+    <string name="track">Rastrear</string>
+    <string name="tracking">Rastreamento</string>
+    <string name="order_status">Status: Em trânsito</string>
+
 </resources>
